changed readonly to disabled

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <!-- id:lz -->
                 <span> Laufzeit: </span>
-                <input type="" class="output" name="laufzeit-output" id="lzo" tabindex="-1" readonly/>
+                <input type="" class="output" name="laufzeit-output" id="lzo" disabled/>
                 <input class="small" id="placeholder" />
                 <input type="number" class="user-input small" name="laufzeit-input" id="lzi" max="72" min="24" title="min: 24  max: 72" />
                 <input type="range" class="" name="laufzeit-range" id="lzr" max="72" min="24" />
@@ -51,53 +51,53 @@
 
                 <!-- id:el -->
                 <span> Eigenleistung: </span>
-                <input class="output" name="eigenleistung-output" id="elo" tabindex="-1" readonly/>
-                <input class="small percent output" name="eigenleistung-percent" id="elp" tabindex="-1" readonly />
+                <input class="output" name="eigenleistung-output" id="elo" disabled/>
+                <input class="small percent output" name="eigenleistung-percent" id="elp" disabled />
                 <input type="number" class="small user-input" name="eigenleistung-input" id="eli" min="0" title="min: 0  max: 46,6%" disabled/>
                 <input type="range" class="" name="eigenleistung-range" id="elr" min="0" max="466" disabled/>
                 <br/>
 
                 <!-- id:rw -->
                 <span> Restwert: </span>
-                <input class="output" name="restwert-output" tabindex="-1" id="rwo" readonly />
-                <input class="small percent output" name="restwert-percent" id="rwp" tabindex="-1" readonly />
+                <input class="output" name="restwert-output" id="rwo" disabled />
+                <input class="small percent output" name="restwert-percent" id="rwp" disabled />
                 <input type="number" class="small user-input" name="restwert-input" id="rwi" min="0" title="min: 10%  max: 50%" disabled/>
                 <input type="range" class="" name="restwert-range" id="rwr" min="100" max="500" disabled/>
                 <br/>
 
                 <!-- id:eg -->
                 <span> Entgelt: </span>
-                <input class="output" name="entgelt" id="eg" tabindex="-1" readonly/>
+                <input class="output" name="entgelt" id="eg" disabled/>
                 <br/>
 
                 <!-- id:rg -->
                 <span> Rechtsgeschäftsgebühr: </span>
-                <input class="output" name="rechtsgeschäftsgebühr" id="rg" tabindex="-1" readonly/>
+                <input class="output" name="rechtsgeschäftsgebühr" id="rg" disabled/>
                 <br/>
 
                 <!-- id:bg -->
                 <span> Bearbeitungsgebühr: </span>
-                <input class="output" name="bearbeitungsgebühr" id="bg" value="100,00 €" tabindex="-1" readonly/>
+                <input class="output" name="bearbeitungsgebühr" id="bg" value="100,00 €" disabled/>
                 <br/>
 
                 <!-- id:ez -->
                 <span> Effektivzinssatz: </span>
-                <input class="output" name="effektivzinssatz" id="ez" tabindex="-1" readonly/>
+                <input class="output" name="effektivzinssatz" id="ez" disabled/>
                 <br/>
 
                 <!-- id:gb -->
                 <span> Gesamtbelastung: </span>
-                <input class="output" name="gesamtbelastung" id="gb" tabindex="-1" readonly/>
+                <input class="output" name="gesamtbelastung" id="gb" disabled/>
                 <br/>
 
                 <!-- id:gz -->
                 <span> Gesamtzinsen: </span>
-                <input class="output" name="gesamtzinsen" id="gz" tabindex="-1" readonly/>
+                <input class="output" name="gesamtzinsen" id="gz" disabled/>
                 <br/>
 
                 <!-- id:fb -->
                 <span> Finanzierungsbetrag: </span>
-                <input class="output" name="finanzierungsbetrag" id="fb" tabindex="-1" readonly/>
+                <input class="output" name="finanzierungsbetrag" id="fb" disabled/>
                 <br/>
             </div>
 
