removed seperate inputs

--- a/index.html
+++ b/index.html
@@ -43,25 +43,22 @@
 
                 <!-- id:lz -->
                 <span> Laufzeit: </span>
-                <input type="" class="output" name="laufzeit-output" id="lzo" disabled/>
+                <input type="" class="user-input" name="laufzeit-output" id="lzi" title="min: 24  max: 72" />
                 <input class="small" id="placeholder" />
-                <input type="number" class="user-input small" name="laufzeit-input" id="lzi" max="72" min="24" title="min: 24  max: 72" />
                 <input type="range" class="" name="laufzeit-range" id="lzr" max="72" min="24" />
                 <br/>
 
                 <!-- id:el -->
                 <span> Eigenleistung: </span>
-                <input class="output" name="eigenleistung-output" id="elo" disabled/>
+                <input class="user-input" name="eigenleistung-output" id="elo" title="min: 0  max: 46,6%" disabled/>
                 <input class="small percent output" name="eigenleistung-percent" id="elp" disabled />
-                <input type="number" class="small user-input" name="eigenleistung-input" id="eli" min="0" title="min: 0  max: 46,6%" disabled/>
                 <input type="range" class="" name="eigenleistung-range" id="elr" min="0" max="466" disabled/>
                 <br/>
 
                 <!-- id:rw -->
                 <span> Restwert: </span>
-                <input class="output" name="restwert-output" id="rwo" disabled />
+                <input class="user-input" name="restwert-output" id="rwo" title="min: 10%  max: 50%" disabled/>
                 <input class="small percent output" name="restwert-percent" id="rwp" disabled />
-                <input type="number" class="small user-input" name="restwert-input" id="rwi" min="0" title="min: 10%  max: 50%" disabled/>
                 <input type="range" class="" name="restwert-range" id="rwr" min="100" max="500" disabled/>
                 <br/>
 
