fixed names and  id's

--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
 
                 <!-- id:lz -->
                 <span> Laufzeit: </span>
-                <input type="" class="user-input" name="laufzeit-output" id="lzi" title="min: 24  max: 72" />
+                <input type="" class="user-input" name="laufzeit-input" id="lzi" title="min: 24  max: 72" />
                 <input class="small" id="placeholder" />
                 <input type="range" class="" name="laufzeit-range" id="lzr" max="72" min="24" />
                 <br/>
 
                 <!-- id:el -->
                 <span> Eigenleistung: </span>
-                <input class="user-input" name="eigenleistung-output" id="elo" title="min: 0  max: 46,6%" disabled/>
+                <input class="user-input" name="eigenleistung-input" id="eli" title="min: 0  max: 46,6%" disabled/>
                 <input class="small percent output" name="eigenleistung-percent" id="elp" disabled />
                 <input type="range" class="" name="eigenleistung-range" id="elr" min="0" max="466" disabled/>
                 <br/>
 
                 <!-- id:rw -->
                 <span> Restwert: </span>
-                <input class="user-input" name="restwert-output" id="rwo" title="min: 10%  max: 50%" disabled/>
+                <input class="user-input" name="restwert-input" id="rwi" title="min: 10%  max: 50%" disabled/>
                 <input class="small percent output" name="restwert-percent" id="rwp" disabled />
                 <input type="range" class="" name="restwert-range" id="rwr" min="100" max="500" disabled/>
                 <br/>
