--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 
     <head>
-        <title> Kalkulator </title>
+        <title> Leasing Kalkulator </title>
         <link rel="stylesheet" href="style.css" />
         <meta charset="utf-8" />
     </head>
 
     <body>
 
-        <header> Fahrzeug-Kalkulator</header>
+        <header> Leasing-Kalkulator </header>
         <main>
 
             <div>
