--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 
     </body>
     <footer>
-        <p> Copyright © 2018
+        <p>
+            Copyright © 2018
             <a href="https://www.creativpuls.at" target="_blank"> CreativPuls GesmbH </a>
         </p>
     </footer>
